@@ -61,9 +61,12 @@
 		<exec executable="/bin/sh">
 		    <arg line="-c 'ln -s Input/input.jar ${WIMS_HOME}/${APPLET_DIR}/input.jar'"/>
 		</exec>
+		<!-- 
+		13/10/2011
 		<exec executable="/bin/sh">
 		    <arg line="-c 'cp *.html ${WIMS_HOME}/${APPLET_DIR}'"/>
-		</exec> 
+		</exec>
+		--> 
 	</target>
 	<target name="clean" description="clean up">
 	<!-- Delete the ${build} and ${dist} directory trees -->
