@@ -55,12 +55,15 @@
 		<exec executable="/bin/sh">
 		    <arg line="-c 'cp ${build}/*.class ${wims_old_classes_dir}'"/>
 		</exec> 
+		<!--
+		    13/10/2011
 		<exec executable="/bin/sh">
 		    <arg line="-c 'cp *.html ${wims_old_classes_dir}'"/>
 		</exec> 
 		<exec executable="/bin/sh">
 		    <arg line="-c 'cp *.lat ${wims_old_classes_dir}'"/>
 		</exec> 
+		-->
 		
 	</target>
 	<target name="clean" description="clean up">
