@@ -1,10 +1,11 @@
-10/2011 : 
+13/10/2011
+build.xml: will not copy *.html / *.lat to "~/public_html/java/Lattice"
 
+12/10/2011  
 Moved sources to src/Misc/applets/Lattice ; uniform build
-
 Backward compatibility by copying (see build.xml) the *.class files into ~/public_html/java/Lattice
 
-Future usage: use the "Lattice.jar" instead of "*.class"
+Future applet usage: use the "Lattice.jar" instead of "*.class"
     
 LatticeViewer.java
  Date :       18th Feb 1998	
